<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/wallet_hint_foreground_holo_dark" >

    <TextView
        android:id="@+id/tvNomRando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNomRando" />

    <EditText
        android:id="@+id/etNomRando"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etNomRando" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvDescRando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDescRando" />

    <EditText
        android:id="@+id/etDescRando"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etDescRando" />

    <TextView
        android:id="@+id/tvDiffRando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDiffRando" />

    <RadioGroup
        android:id="@+id/rgDifficulte"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    </RadioGroup>

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>