<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/wallet_hint_foreground_holo_dark" >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvReglagePseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvReglagePseudo" />

    <EditText
        android:id="@+id/etReglagePseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/etReglagePseudo"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/user" />

     <TextView
        android:id="@+id/tvReglageChoixVue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvReglageChoixVue" />
    
    <RadioGroup
        android:id="@+id/rgChoixVue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <RadioButton
            android:id="@+id/rbTraficView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbTraficView" />

        <RadioButton
            android:id="@+id/rbSatView"
            android:text="@string/rbSatView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rbStreetView"
            android:text="@string/rbStreetView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>
    
    <RadioGroup
        android:id="@+id/rgChoixTypeRando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >
    </RadioGroup>
	<Button
	     android:id="@+id/btValidateChoice"
            android:text="@string/btValidateChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_gravity="center"
        android:background="@drawable/button"
	    />
</LinearLayout></ScrollView>


<!-- <?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    
     android:background="@color/wallet_hint_foreground_holo_dark" >
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical">

    <ImageView
        android:id="@+id/android_picture"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="@dimen/normal_padding"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/map35" />

    <Button
        android:id="@+id/create_account"
        style="@style/button_text"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:text="@string/create_account" />


    <EditText
        android:id="@+id/user_login"
        android:layout_gravity="center"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="-2dp"
		android:padding="10dp"
		android:hint="User Name"
		android:textColorHint="#bbbbbb"
		android:drawableLeft="@drawable/user" />



    <EditText
        android:id="@+id/user_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:hint="Password"
        android:textColorHint="#cccccc"
        android:drawableLeft="@drawable/password"/>

    <Button
        android:id="@+id/connect"
        style="@style/button_text"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/normal_padding"
        android:background="@drawable/button"
        android:text="@string/connect" />

</LinearLayout></ScrollView>-->