<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".fragment.FragInvit" >
    
    <ImageView
        android:id="@+id/invit_picture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_padding"
        android:src="@drawable/add70"
        android:layout_gravity="center"
        android:contentDescription="@string/invit_participant" />
    
    <TextView
       	android:id="@+id/txt_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/normal_padding"
        android:text="@string/choix_contact"
        android:textSize="@dimen/normal_text_size"
        android:gravity="center"
        android:textColor="@color/black_color" 
        android:layout_below="@id/invit_picture"/>

    <EditText
        android:id="@+id/contact"
        android:layout_width="@dimen/large_padding"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:gravity="center"
        android:layout_below="@id/txt_"/>

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_padding"
        android:text="@string/send" 
        android:onClick="inviterParticipant"
        android:gravity="center"
        android:layout_below="@id/contact"/>

</RelativeLayout>
